refactor(phase4): implement DRY refactoring and dead code removal
Took 9 minutes